Addition of the scritp in the target directory
The script is now in the target directory

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,10 @@
 *.project
 *.prefs
-copy_jar.cmd
-.classpath
+*.cmd
+*.classpath
 *.class
-target/
+*.settings
+target/archive-tmp
+target/generated-sources
+target/maven-archiver
+
