Change jar packager + Code clean up
The maven-shade plugin is used to generate the jar with dependencies
(instead of maven-assembly-plugin)

--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,9 @@
 *.class
 *.settings
 dev_pom.xml
+target/mangafox-downloader-1.0.0.jar
 target/archive-tmp
 target/generated-sources
 target/maven-archiver
+target/maven-status
 
